better grid alignment in repsonses, resized icons (with correct file this time)

--- a/public_records_portal/static/css/case.css
+++ b/public_records_portal/static/css/case.css
@@ -41,3 +41,8 @@ form {
   margin-bottom: 5em;
   margin-top: 0.5em;
 }
+
+/* move the response text closer to the response icon */
+div.span9 {
+  margin-left: 0px !important;
+}
